updated pl firebaserc

--- a/.firebaserc
+++ b/.firebaserc
@@ -120,6 +120,9 @@
         ],
         "cms": [
           "cms-blockframes-pl"
+        ],
+        "waterfall": [
+          "waterfall-blockframes-pl"
         ]
       }
     }
