--- a/package.json
+++ b/package.json
@@ -82,8 +82,8 @@
     "@google-cloud/storage": "^5.19.1",
     "@mailchimp/mailchimp_marketing": "^3.0.74",
     "@nrwl/angular": "13.9.6",
-    "@rx-angular/cdk": "^1.0.0-beta.2",
-    "@rx-angular/template": "^1.0.0-beta.32",
+    "@rx-angular/cdk": "^2.0.0",
+    "@rx-angular/template": "^2.0.0",
     "@sendgrid/eventwebhook": "^7.4.5",
     "@sendgrid/helpers": "^7.6.2",
     "@sendgrid/mail": "^7.6.2",
