--- a/package.json
+++ b/package.json
@@ -66,9 +66,9 @@
     "@angular/common": "13.2.7",
     "@angular/compiler": "13.2.7",
     "@angular/core": "13.2.7",
-    "@angular/flex-layout": "^11.0.0-beta.33",
+    "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "13.2.7",
-    "@angular/google-maps": "^11.0.3",
+    "@angular/google-maps": "^13.3.9",
     "@angular/localize": "13.2.7",
     "@angular/material": "13.2.6",
     "@angular/platform-browser": "13.2.7",
@@ -125,7 +125,7 @@
     "@angular-eslint/eslint-plugin": "13.0.1",
     "@angular-eslint/eslint-plugin-template": "13.0.1",
     "@angular-eslint/template-parser": "13.0.1",
-    "@angular/cli": "~13.2.0",
+    "@angular/cli": "^13.3.11",
     "@angular/compiler-cli": "13.2.7",
     "@angular/language-service": "13.2.7",
     "@angularclass/hmr": "^2.1.3",
@@ -139,7 +139,7 @@
     "@nrwl/linter": "13.9.6",
     "@nrwl/node": "13.9.6",
     "@nrwl/workspace": "13.9.6",
-    "@schematics/angular": "10.1.7",
+    "@schematics/angular": "^13.3.11",
     "@types/date-fns": "^2.6.0",
     "@types/events": "^3.0.0",
     "@types/express": "4.17.13",
