--- a/libs/contract/tsconfig.lib.json
+++ b/libs/contract/tsconfig.lib.json
@@ -22,5 +22,5 @@
     "enableResourceInlining": true
   },
   "include": ["src/lib"],
-  "exclude": ["src/test-setup.ts", "**/*.spec.ts", "**/*.test.ts"]
+  "exclude": ["src/test-setup.ts", "**/*.spec.ts", "**/*.test.ts", "jest.config.ts"]
 }
