--- a/libs/import/tsconfig.lib.json
+++ b/libs/import/tsconfig.lib.json
@@ -12,6 +12,6 @@
     "strictMetadataEmit": true,
     "enableResourceInlining": true
   },
-  "exclude": ["src/test-setup.ts", "**/*.spec.ts", "**/*.test.ts"],
+  "exclude": ["src/test-setup.ts", "**/*.spec.ts", "**/*.test.ts", "jest.config.ts"],
   "include": ["src/lib", "src/index.ts"]
 }
