--- a/libs/user/tsconfig.lib.json
+++ b/libs/user/tsconfig.lib.json
@@ -12,6 +12,6 @@
     "strictMetadataEmit": true,
     "enableResourceInlining": true
   },
-  "exclude": ["src/test-setup.ts", "**/*.spec.ts", "**/*.test.ts", "**/*.stories.ts", "**/*.stories.js"],
+  "exclude": ["src/test-setup.ts", "**/*.spec.ts", "**/*.test.ts", "**/*.stories.ts", "**/*.stories.js", "jest.config.ts"],
   "include": ["src/lib"]
 }
