--- a/nx.json
+++ b/nx.json
@@ -12,7 +12,7 @@
   "npmScope": "blockframes",
   "tasksRunnerOptions": {
     "default": {
-      "runner": "@nrwl/workspace/tasks-runners/default",
+      "runner": "nx/tasks-runners/default",
       "options": {
         "cacheableOperations": [
           "build",
