--- a/package.json
+++ b/package.json
@@ -190,7 +190,7 @@
     "prettier": "2.6.2",
     "pwmetrics": "^4.2.2",
     "ts-jest": "27.1.4",
-    "ts-node": "9.1.1",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "^3.14.1",
     "tsickle": "0.38.0",
     "tslib": "^2.2.0",
