--- a/package.json
+++ b/package.json
@@ -189,12 +189,12 @@
     "prettier": "2.6.2",
     "pwmetrics": "^4.2.2",
     "ts-jest": "27.0.5",
-    "ts-node": "9.1.1",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "^3.14.1",
     "tsickle": "0.38.0",
     "tslib": "^2.2.0",
     "tslint": "6.1.3",
-    "typescript": "4.8.4"
+    "typescript": "^4.6.4"
   },
   "pwmetrics": {
     "url": "http://localhost:4200/"
