--- a/package.json
+++ b/package.json
@@ -195,7 +195,7 @@
     "tsickle": "0.38.0",
     "tslib": "^2.2.0",
     "tslint": "6.1.3",
-    "typescript": "4.8.4"
+    "typescript": "^4.6.4"
   },
   "pwmetrics": {
     "url": "http://localhost:4200/"
