--- a/package.json
+++ b/package.json
@@ -81,7 +81,6 @@
     "@google-cloud/bigquery": "^5.12.0",
     "@google-cloud/storage": "^5.19.1",
     "@mailchimp/mailchimp_marketing": "^3.0.74",
-    "@nrwl/angular": "13.9.6",
     "@rx-angular/cdk": "^2.0.0",
     "@rx-angular/template": "^2.0.0",
     "@sendgrid/eventwebhook": "^7.4.5",
@@ -129,15 +128,15 @@
     "@angular/language-service": "14.3.0",
     "@angularclass/hmr": "^2.1.3",
     "@firebase/rules-unit-testing": "^2.0.2",
-    "@nrwl/angular": "13.9.6",
-    "@nrwl/cli": "13.9.6",
-    "@nrwl/cypress": "13.9.6",
-    "@nrwl/eslint-plugin-nx": "13.9.6",
+    "@nrwl/angular": "^14.8.8",
+    "@nrwl/cli": "^14.8.8",
+    "@nrwl/cypress": "^14.8.8",
+    "@nrwl/eslint-plugin-nx": "^14.8.8",
     "@nrwl/express": "15.3.0",
-    "@nrwl/jest": "13.9.6",
-    "@nrwl/linter": "13.9.6",
-    "@nrwl/node": "13.9.6",
-    "@nrwl/workspace": "13.9.6",
+    "@nrwl/jest": "^14.8.8",
+    "@nrwl/linter": "^14.8.8",
+    "@nrwl/node": "^14.8.8",
+    "@nrwl/workspace": "^14.8.8",
     "@schematics/angular": "^14.2.11",
     "@types/date-fns": "^2.6.0",
     "@types/events": "^3.0.0",
@@ -155,8 +154,8 @@
     "@types/sendgrid": "^4.3.0",
     "@types/sharp": "^0.24.0",
     "@types/tmp": "0.1.0",
-    "@typescript-eslint/eslint-plugin": "5.10.2",
-    "@typescript-eslint/parser": "5.10.2",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
     "camelcase": "^6.1.0",
     "codelyzer": "6.0.1",
     "commander": "^7.0.0",
@@ -180,11 +179,11 @@
     "jest-junit": "^13.2.0",
     "jest-preset-angular": "11.1.1",
     "ng-packagr": "14.2.2",
-    "nx": "14.8.8",
+    "nx": "^14.8.8",
     "pdfkit": "^0.10.0",
     "postcss": "^8.3.9",
     "postcss-import": "^14.0.2",
-    "postcss-preset-env": "^6.7.0",
+    "postcss-preset-env": "~7.5.0",
     "postcss-url": "^10.1.1",
     "prettier": "2.6.2",
     "pwmetrics": "^4.2.2",
