--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,9 +81,15 @@ commands:
             - source-v1-{{ .Branch }}-
             - source-v1-
       - checkout
+      - restore_cache:
+          keys:
+            - dependencies-{{ .Environment.CACHE_VERSION }}-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - dependencies-{{ .Environment.CACHE_VERSION }}
+            - dependencies-
       - run: touch .env # dotenv will crash without this
       - run: cp env/env.demo-blockframes.ts env/env.ts # required for the typechecking & file rewrite to work
-      - run: npm install --no-save
+      - run: rm -rf node_modules && npm install --no-save
       - run: npx cypress install
       - run: git gc
       - run:
@@ -96,6 +102,15 @@ commands:
             else
               exit 0
             fi
+      - save_cache:
+          paths:
+            - node_modules
+            - /home/circleci/.cache/Cypress
+          key: dependencies-{{ .Environment.CACHE_VERSION }}-{{ checksum "package.json" }}
+      - save_cache:
+          key: source-v1-{{ .Branch }}-{{ .Revision }}
+          paths:
+            - ".git"
   prepare_environment:
     description: 'Checkout project and select env'
     steps:
