--- a/angular.json
+++ b/angular.json
@@ -306,7 +306,7 @@
             "headless": false,
             "exit": false,
             "record": false,
-            "browser": "chrome",
+            "browser": "electron",
             "devServerTarget": "catalog:serve"
           },
           "configurations": {
@@ -325,7 +325,7 @@
             "cypressConfig": "apps/catalog/catalog-e2e/cypress.config.js",
             "tsConfig": "apps/catalog/catalog-e2e/tsconfig.e2e.json",
             "baseUrl": "http://localhost:4200",
-            "browser": "chrome",
+            "browser": "electron",
             "devServerTarget": "catalog:serve"
           },
           "configurations": {
@@ -476,7 +476,7 @@
             "headless": false,
             "exit": false,
             "record": false,
-            "browser": "chrome",
+            "browser": "electron",
             "devServerTarget": "cms:serve"
           },
           "configurations": {
@@ -495,7 +495,7 @@
             "cypressConfig": "apps/cms/cms-e2e/cypress.config.js",
             "tsConfig": "apps/cms/cms-e2e/tsconfig.e2e.json",
             "baseUrl": "http://localhost:4200",
-            "browser": "chrome",
+            "browser": "electron",
             "devServerTarget": "cms:serve"
           },
           "configurations": {
@@ -702,7 +702,7 @@
             "headless": false,
             "exit": false,
             "record": false,
-            "browser": "chrome",
+            "browser": "electron",
             "devServerTarget": "crm:serve"
           },
           "configurations": {
@@ -721,7 +721,7 @@
             "cypressConfig": "apps/crm/crm-e2e/cypress.config.js",
             "tsConfig": "apps/crm/crm-e2e/tsconfig.e2e.json",
             "baseUrl": "http://localhost:4200",
-            "browser": "chrome",
+            "browser": "electron",
             "devServerTarget": "crm:serve"
           },
           "configurations": {
@@ -940,7 +940,7 @@
             "headless": false,
             "exit": false,
             "record": false,
-            "browser": "chrome",
+            "browser": "electron",
             "devServerTarget": "festival:serve",
             "env": {
               "notice": "Env is being read"
@@ -962,7 +962,7 @@
             "cypressConfig": "apps/festival/festival-e2e/cypress.config.js",
             "tsConfig": "apps/festival/festival-e2e/tsconfig.e2e.json",
             "baseUrl": "http://localhost:4200",
-            "browser": "chrome",
+            "browser": "electron",
             "devServerTarget": "festival:serve"
           },
           "configurations": {
@@ -1112,7 +1112,7 @@
             "headless": false,
             "exit": false,
             "record": false,
-            "browser": "chrome",
+            "browser": "electron",
             "devServerTarget": "financiers:serve"
           },
           "configurations": {
@@ -1131,7 +1131,7 @@
             "cypressConfig": "apps/financiers/financiers-e2e/cypress.config.js",
             "tsConfig": "apps/financiers/financiers-e2e/tsconfig.e2e.json",
             "baseUrl": "http://localhost:4200",
-            "browser": "chrome",
+            "browser": "electron",
             "devServerTarget": "financiers:serve"
           },
           "configurations": {
