--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,7 +89,7 @@ commands:
             - dependencies-
       - run: touch .env # dotenv will crash without this
       - run: cp env/env.demo-blockframes.ts env/env.ts # required for the typechecking & file rewrite to work
-      - run: rm -rf node_modules && npm install --no-save
+      - run: npm install --no-save
       - run: npx cypress install
       - run: git gc
       - run:
