updated cypress config

--- a/angular.json
+++ b/angular.json
@@ -1685,7 +1685,7 @@
         "serve": {
           "executor": "@nrwl/cypress:cypress",
           "options": {
-            "cypressConfig": "apps/waterfall/waterfall-e2e/cypress.json",
+            "cypressConfig": "apps/waterfall/waterfall-e2e/cypress.config.js",
             "tsConfig": "apps/waterfall/waterfall-e2e/tsconfig.e2e.json",
             "baseUrl": "http://localhost:4200",
             "watch": true,
