--- a/package.json
+++ b/package.json
@@ -88,6 +88,8 @@
     "@sendgrid/mail": "^7.6.2",
     "@sentry/browser": "^7.16.0",
     "@sentry/node": "^7.16.0",
+    "@rive-app/canvas-advanced": "^1.0.103",
+    "@rive-app/webgl-advanced": "^1.0.103",
     "algoliasearch": "^4.13.0",
     "angular-calendar": "^0.28.5",
     "angular-idle-preload": "^3.0.0",
@@ -107,7 +109,7 @@
     "ng-apexcharts": "^1.2.0",
     "ng-form-factory": "^0.1.0-beta.3",
     "ng-intercom": "^8.0.0",
-    "ng-rive": "^0.2.2",
+    "ng-rive": "^0.2.3",
     "ngfire": "^0.0.33",
     "ngx-image-cropper": "^3.0.3",
     "puppeteer": "^13.5.2",
