--- a/package.json
+++ b/package.json
@@ -77,10 +77,12 @@
     "@angular/pwa": "0.1101.2",
     "@angular/router": "14.3.0",
     "@angular/service-worker": "14.3.0",
+    "@antv/g6": "^4.8.10",
     "@faker-js/faker": "^6.1.2",
     "@google-cloud/bigquery": "^5.12.0",
     "@google-cloud/storage": "^5.19.1",
     "@mailchimp/mailchimp_marketing": "^3.0.74",
+    "@rive-app/canvas-advanced": "^1.1.5",
     "@rx-angular/cdk": "^2.0.0",
     "@rx-angular/template": "^2.0.0",
     "@sendgrid/eventwebhook": "^7.4.5",
@@ -88,7 +90,6 @@
     "@sendgrid/mail": "^7.6.2",
     "@sentry/browser": "^7.16.0",
     "@sentry/node": "^7.16.0",
-    "@rive-app/canvas-advanced": "^1.1.5",
     "algoliasearch": "^4.13.0",
     "angular-calendar": "^0.28.5",
     "angular-idle-preload": "^3.0.0",
@@ -105,6 +106,7 @@
     "jsonwebtoken": "^9.0.0",
     "leaflet": "^1.6.0",
     "lodash": "^4.17.21",
+    "ng-antv-g6": "^0.0.5",
     "ng-apexcharts": "^1.2.0",
     "ng-form-factory": "^0.1.0-beta.3",
     "ng-intercom": "^8.0.0",
