--- a/package.json
+++ b/package.json
@@ -79,8 +79,10 @@
     "@angular/service-worker": "14.3.0",
     "@faker-js/faker": "^6.1.2",
     "@google-cloud/bigquery": "^5.12.0",
+    "@google-cloud/local-auth": "^2.1.0",
     "@google-cloud/storage": "^5.19.1",
     "@mailchimp/mailchimp_marketing": "^3.0.74",
+    "@rive-app/canvas-advanced": "^1.1.5",
     "@rx-angular/cdk": "^2.0.0",
     "@rx-angular/template": "^2.0.0",
     "@sendgrid/eventwebhook": "^7.4.5",
@@ -88,7 +90,6 @@
     "@sendgrid/mail": "^7.6.2",
     "@sentry/browser": "^7.16.0",
     "@sentry/node": "^7.16.0",
-    "@rive-app/canvas-advanced": "^1.1.5",
     "algoliasearch": "^4.13.0",
     "angular-calendar": "^0.28.5",
     "angular-idle-preload": "^3.0.0",
