--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "eslint-plugin-cypress": "^2.10.3",
     "firebase-functions-test": "^0.3.3",
     "firebase-tools": "11.22.0",
+    "google-auth-library": "^8.8.0",
     "husky": "^3.1.0",
     "inquirer": "^7.3.3",
     "jest": "27.2.3",
