--- a/sample.env
+++ b/sample.env
@@ -2,7 +2,6 @@
 ##
 ##
 
-CYPRESS_MAILOSAUR_API_KEY="";
 SENDGRID_API_KEY=""
 ALGOLIA_API_KEY=""
 JWPLAYER_SECRET=""
@@ -13,6 +12,9 @@ TWILIO_ACCOUNT_SECRET=""
 TWILIO_API_KEY_SECRET=""
 TWILIO_API_KEY_SID=""
 MAILCHIMP_API_KEY=""
+CYPRESS_GMAIL_CLIENT_ID=""
+CYPRESS_GMAIL_CLIENT_SECRET=""
+CYPRESS_GMAIL_REFRESH_TOKEN=""
 
 ## Service accounts
 GOOGLE_APPLICATION_CREDENTIALS=""
