--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "@google-cloud/bigquery": "^5.12.0",
     "@google-cloud/storage": "^5.19.1",
     "@mailchimp/mailchimp_marketing": "^3.0.74",
-    "@rive-app/canvas-advanced": "^1.1.5",
+    "@rive-app/canvas-advanced": "1.1.6",
     "@rx-angular/cdk": "^2.0.0",
     "@rx-angular/template": "^2.0.0",
     "@sendgrid/eventwebhook": "^7.4.5",
@@ -108,7 +108,7 @@
     "ng-apexcharts": "^1.2.0",
     "ng-form-factory": "^0.1.0-beta.3",
     "ng-intercom": "^8.0.0",
-    "ng-rive": "^0.2.3",
+    "ng-rive": "0.2.6",
     "ngfire": "^0.0.33",
     "ngx-image-cropper": "^3.0.3",
     "puppeteer": "^13.5.2",
