--- a/package.json
+++ b/package.json
@@ -172,7 +172,7 @@
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "firebase-functions-test": "^0.3.3",
-    "firebase-tools": "^11.30.0",
+    "firebase-tools": "11.30.0",
     "google-auth-library": "^8.8.0",
     "husky": "^3.1.0",
     "inquirer": "^7.3.3",
