Airtable update process + refacto

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@sendgrid/mail": "^7.6.2",
     "@sentry/browser": "^7.16.0",
     "@sentry/node": "^7.16.0",
+    "airtable": "^0.12.2",
     "algoliasearch": "^4.13.0",
     "angular-calendar": "^0.28.5",
     "angular-idle-preload": "^3.0.0",
