--- a/sample.env
+++ b/sample.env
@@ -15,6 +15,7 @@ MAILCHIMP_API_KEY=""
 CYPRESS_GMAIL_CLIENT_ID=""
 CYPRESS_GMAIL_CLIENT_SECRET=""
 CYPRESS_GMAIL_REFRESH_TOKEN=""
+AIRTABLE_TOKEN=""
 
 ## Service accounts
 GOOGLE_APPLICATION_CREDENTIALS=""
