--- a/apps/backend-functions/src/package.json
+++ b/apps/backend-functions/src/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.21",
     "twilio": "3.76.1",
     "handlebars": "^4.7.7",
-    "puppeteer": "^13.5.2"
+    "puppeteer": "^13.5.2",
+    "airtable": "^0.12.2"
   }
 }
